# HOOPLApy

./: .gitignore  LICENSE  README.md  config.toml  main.py  pyproject.toml  run_black.sh
docs/: architecture.drawio
hoopla/: __init__.py  assimilation.py  calibration.py  config.py  forecast.py  initialization.py  models.py  simulation.py  util.py  validation.py
hoopla/calibration/: calibration.py  optimization.py  sce_ua.py  util.py
hoopla/data/: __init__.py  croping.py  loader.py  loaders.py  observations.py  validation.py
hoopla/hydro_models/: __init__.py  hydro_model.py  hydro_model_1.py  models.py
hoopla/models/: __init__.py  da_model.py  hydro_model.py  loaders.py  pet_model.py  sar_model.py  util.py
hoopla/models/DA/: ensemble_kalman_filter.py
hoopla/models/PET/: oudin.py
hoopla/models/SAR/: cema_neige.py
hoopla/models/hydro/: hydro_model_1.py
hoopla/pet_models/: __init__.py  models.py  oudin.py  pet_model.py
hoopla/sar_models/: __init__.py  sar_model.py
hoopla/util/: croping.py  validation.py
tests/models/: test_loaders.py
tests/pet_models/: test_util.py
