[tool.poetry]
name = "hooplapy"
version = "0.1.0"
description = "Python implementation of HOOPLA - https://github.com/AntoineThiboult/HOOPLA"
authors = ["<dev-logiciels-recherche@ulaval.ca>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
scipy = { version = "^1.8.0", python = ">=3.8,<3.11" }
toml = "^0.10.2"
spotpy = "^1.5.14"
matplotlib = "^3.5.1"
filterpy = "^1.4.5"
mat73 = "^0.59"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
